--- a/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.html
+++ b/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.html
@@ -16,7 +16,7 @@
             </h3>
 
             <p>
-                SpotBie uses your location to find nearby users, retail shops, places to eat, and events.
+                SpotBie uses your location to find nearby users, shopping, places to eat, and events.
             </p>
 
             <div class='sb-button' (click)="switchCard()">Let's Go!</div>
