--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
@@ -30,10 +30,10 @@ h2{
     width: 102%;
     min-width: 102%;
     max-width: 102%;    
-    z-index: 9999998;
+    z-index: 99;
 }
 .sb-closeButton{
-    z-index: 9999999;
+    z-index: 99;
 }
 .spotbie-paragraph{
     text-indent: unset;
@@ -41,10 +41,10 @@ h2{
 
 .spotbie-overlay-window{
     background-color: rgb(12, 12, 12);
-    z-index: 9999998;
+    z-index: 99;
 }
 .sb-closeButton{
-    z-index: 9999999;
+    z-index: 99;
 }
 
 .spotbie-contact-me-info{
